# cligol

./: .gitignore  CMakeLists.txt  Makefile  README.md  gameoflife.cpp  gameoflife.hpp  main.cpp  util.cpp  util.hpp
include/: util.hpp
maps/: explosion.txt  glider.txt  gun.txt  snake.txt  spaceship.txt
src/: gameoflife.cpp  main.cpp
